--- a/_config.yml
+++ b/_config.yml
@@ -224,10 +224,10 @@ exclude:
   - screenshot.png
   - docs/
 
+url: "https://hxngiee.github.io/" # the base hostname & protocol for your site
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
-
 # Beautiful Jekyll / Dean Attali
 # 2fc73a3a967e97599c9763d05e564189
 
