--- a/_config.yml
+++ b/_config.yml
@@ -224,7 +224,7 @@ exclude:
   - screenshot.png
   - docs/
 
-url: "https://hxngiee.github.io/" # the base hostname & protocol for your site
+url: "https://hxngiee.github.io" # the base hostname & protocol for your site
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
