--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title: Hxngiee
 # Your name to show in the footer
 author: KIHONG KIM
 
-# --- List of links in the navigation bar --- #
+# --- List of links in the navigation bar --- #G
 
 navbar-links:
   About Me: "aboutme"
@@ -231,3 +231,8 @@ plugins:
 # Beautiful Jekyll / Dean Attali
 # 2fc73a3a967e97599c9763d05e564189
 
+
+# MathJax
+lsi: false
+excerpt_separator: "\n\n"
+incremental: false
